<resources>
    <string name="app_name" translatable="false">Dragster</string>
    <string name="address" translatable="false">Rua Padre Eloy, 76 - Engenho Velho de Brotas, Salvador - BA, 40290-190</string>

    <!--Login-->
    <string name="loginUsername">Username</string>
    <string name="loginPasswordHint">Password</string>
    <string name="loginButton">Log In</string>
    <string name="successLogIn">Welcome, </string>
    <string name="noLogInInput">Fill the fields above</string>
    <string name="incorrectInput">Incorrect username or password</string>
    <string name="errorInputLogin">Invalid username</string>
    <string name="errorPasswordLogin">Invalid Password</string>
    <string name="createAccount">Create Account</string>

    <!--Create Account-->
    <string name="createAccountTitle">Create Account</string>
    <string name="loginEmail">E-mail</string>
    <string name="createPassword">Create Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="btnCreateAccount">Create</string>
    <string name="usernameError">Username too short</string>
    <string name="emailError">Invalid E-mail</string>
    <string name="passwordError">Password too short</string>
    <string name="passwordNoMatch">Passwords does not match</string>
    <string name="accountCreated">Account Created!</string>

    <!--Main Menu-->
    <string name="welcome">Welcome, </string>
    <string name="accType">Account Type: </string>
    <string name="scheduleRepair">Schedule Repair</string>
    <string name="vehicle">Vehicles</string>
    <string name="contactUS">Contact Us</string>
    <string name="stamps">My Stamps</string>
    <string name="editProfile">Change Password</string>
    <string name="config">Administration</string>
    <string name="oldPassword">Old Password</string>
    <string name="newPassword">New Password</string>
    <string name="repeatNewPassword">Repeat New Password</string>
    <string name="passwordChanged">Password Changed!</string>

    <!--Schedule-->
    <string name="dateSelect">Select Date</string>
    <string name="hourSelect">Select Time</string>
    <string name="scheduleTextHint">Describe your vehicle\'s problem</string>
    <string name="scheduleComplete">Scheduled!</string>

    <!--ADM Menu-->
    <string name="users">Users</string>
    <!--Spinner-->
    <string-array name="tipoUser">
        <item>NORMAL</item>
        <item>FIDELIZADO</item>
        <item>ADMIN</item>
    </string-array>
    <!--End Spinner-->
    <string name="admEditAcc">Edit Account</string>
    <string name="vehicleAdd">Add Vehicle</string>
    <string name="vehicleEdit">Edit Vehicle</string>
    <string name="seeRepair">View Schedule</string>
    <!--Create Car-->
    <string name="crtCar">Register Vehicle</string>
    <string name="brand">Brand</string>
    <string name="model">Model</string>
    <string name="year">Year</string>
    <string name="licensePlate">License Plate</string>
    <string name="carCreated">Vehicle Registered!</string>
    <string name="owner">Owner:</string>
    <string name="editCar">Edit Vehicle</string>
</resources>