<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".menuAdm.AdminMenu"
    android:background="@drawable/main_background">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="500dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="20dp"
        android:gravity="center">

        <Button
            android:id="@+id/admUsers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/person"
            android:text="@string/users" />

        <Button
            android:id="@+id/addCar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/car"
            android:text="@string/vehicle" />

        <Button
            android:id="@+id/seeRepair"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="11dp"
            android:drawableTop="@drawable/clock2"
            android:text="@string/seeRepair" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>